Attempted fix for background image scaling on mobile #2

--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
     --mobile-width: 90%;
     --width: 75%;
 }
+html{
+    height: 100%;
+    width: 100%;
+}
 body{
     font-family: Oswald, sans-serif;
     font-weight: 300;
